--- a/style.css
+++ b/style.css
@@ -57,10 +57,9 @@ a{
 #navigation li {
   display: inline;
   list-style: none;
-  margin: 0 70px;
+  margin: 60px;
   border-bottom: 3px solid #F2F2F2;
 }
-
 
 
 /* CONTENU PAGE */
@@ -109,6 +108,12 @@ input[type=submit] {
 
 /* filtres */
 
+#filtres {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: -15px;
+}
+
 .filtre_curseur {
   display: flex;
   margin-top: 10px;
@@ -147,19 +152,14 @@ input[type=submit] {
   color: #0065FC;
 }
 
-#filtres {
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: -15px;
-}
-
 .fa-info {
   color: #0065FC;
 }
 
 #informations {
   display: flex;
-  margin-top: 20px;
+  margin-top: 40px;
+  margin-bottom: 40px;
   align-items: center;
 }
 
@@ -180,14 +180,17 @@ input[type=submit] {
 #fond_populaire {
   background-color: #F2F2F2;
   padding: 10px;
-  margin-top: 10px;
 }
 
-.fond_vignette_pop {
+.fond_vignette_pop { 
   background-color: #fff;
   border-radius: 10px;
   height: 200px;
   margin-bottom: 20px;
+}
+
+.fond_vignette_pop .avis {
+  padding-left: 10px;
 }
 
 .hebergements_pop {
@@ -202,12 +205,13 @@ input[type=submit] {
 .description_vignette_pop {
   display: flex;
   flex-direction: column;
-  padding-left: 30px;
+  padding-left: 10px;
+  margin-bottom: 20px;
+  margin-right: 20px;
 }
 
 .description_vignette_pop p {
   margin-top: 10px;
-  margin-bottom: 50px;
 }
 
 /* section 2 Hebergements */
@@ -215,7 +219,6 @@ input[type=submit] {
 #fond_hebergement {
   background-color: #fff;
   padding: 10px;
-  margin-top: 10px;
 }
 
 #fond_hebergement a {
@@ -250,6 +253,7 @@ input[type=submit] {
   margin-top: -12px;
 }
 
+
 /* section 3 Activites */
 
 
@@ -259,7 +263,25 @@ input[type=submit] {
   margin-top: 10px;
 }
 
-.fond_vignette_act {
+.fond_vignette_act_1 {
+  background-color: #fff;
+  border: 0.5px solid #F2F2F2;
+  border-radius: 10px;
+  box-shadow: 2px 2px 10px #F2F2F2;
+  height: 250px;
+  margin-bottom: 20px;
+}
+
+.fond_vignette_act_2 {
+  background-color: #fff;
+  border: 0.5px solid #F2F2F2;
+  border-radius: 10px;
+  box-shadow: 2px 2px 10px #F2F2F2;
+  height: 250px;
+  margin-bottom: 20px;
+}
+
+.fond_vignette_act_3 {
   background-color: #fff;
   border: 0.5px solid #F2F2F2;
   border-radius: 10px;
@@ -282,38 +304,197 @@ input[type=submit] {
 
 
 
-
-
 /* PIED PAGE */
 
 footer {
   background-color: #F2F2F2;
   padding-left: 20px;
-  padding-top: 10px;
+  padding-top: 5px;
   padding-bottom: 30px;
-}
-
-.footer {
-  margin-top: 40px;
 }
 
 .footer h3 {
   padding-left: 10px;
 }
 
-ul {
+.footer ul {
   margin-left: -30px;
 }
 
-li {
+.footer li {
 	list-style: none;
   margin-bottom: 8px;
 }
 
-li a {
+.footer li a {
   color: #000;
 }
 
+.footer {
+  margin-top: 40px;
+  margin-right: 20px;
+}
 
-/* Commentaires */
+
+/* Nouvelles règles si la fenêtre fait plus de 992px de large */
+
+@media screen and (min-width: 992px){
+
+/* Hebergements */
+
+#heb_pop {
+  display: flex;
+  flex-direction: row-reverse;
+}
+#fond_hebergement {
+  background-color: #F2F2F2;
+  border-radius: 10px;
+  margin-right: 20px;
+  height: 680px;
+  width: 70%;
+  justify-content: center;
+}
+
+#fond_hebergement h2, a {
+  margin-left: 20px;
+}
+
+#all_vignettes_heb {
+  display: flex;
+  flex-wrap: wrap;
+  margin: auto;
+}
+
+.fond_vignette_heb {
+  height: 250px;
+  width: 30%;
+  margin: 0 auto 20px;
+  box-shadow: 2px 2px 10px #a0a0a0;
+}
+
+.hebergements_ville {
+  width: 93%;
+  height: 140px;
+  margin: 10px 10px; 
+}
+
+.description_vignette_heb {
+  margin-top: -25px;
+  margin-left: 3px;
+}
+
+/* Les plus populaires */
+
+#fond_populaire {
+  border-radius: 10px;
+}
+
+.fond_vignette_pop {
+  width: 95%;
+  height: 178px;
+  margin: 0 auto 20px;
+  box-shadow: 2px 2px 10px #a0a0a0;
+}
+
+.hebergements_pop {
+  margin: 10px;  
+  height: 89%;
+  width: 160px;
+  object-fit: cover;
+  float: left;
+}
+
+/* Activites */
+
+
+#fond_activite h2 {
+  margin-left: 20px;
+}
+
+#all_vignettes_act {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  height: 450px;
+  margin: 10px;
+}
+
+.fond_vignette_act_1 {
+  background-color: #fff;
+  border: 0.5px solid #F2F2F2;
+  border-radius: 10px;
+  box-shadow: 2px 2px 10px #F2F2F2;
+  height: 420px;
+  width: 20%;
+}
+
+.fond_vignette_act_1 .activites_ville {
+  border-radius: 10px 10px 0px 0px;
+  margin: 0px;  
+  height: 360px;
+  width: 100%;
+  object-fit: cover;
+}
+
+.fond_vignette_act_2 {
+  background-color: #fff;
+  border: 0.5px solid #F2F2F2;
+  border-radius: 10px;
+  box-shadow: 2px 2px 10px #F2F2F2;
+  height: 220px;
+  width: 20%;
+}
+
+.fond_vignette_act_2 .activites_ville {
+  border-radius: 10px 10px 0px 0px;
+  margin: 0px;  
+  height: 160px;
+  width: 100%;
+  object-fit: cover;
+}
+
+.fond_vignette_act_3 {
+  background-color: #fff;
+  border: 0.5px solid #F2F2F2;
+  border-radius: 10px;
+  box-shadow: 2px 2px 10px #F2F2F2;
+  height: 180px;
+  width: 20%;
+}
+
+.fond_vignette_act_3 .activites_ville {
+  border-radius: 10px 10px 0px 0px;
+  margin: 0px;  
+  height: 120px;
+  width: 100%;
+  object-fit: cover;
+}
+
+
+
+/* PIED PAGE */
+
+footer {
+  margin-top: 40px;
+  display: flex;
+}
+
+.footer ul {
+  margin-left: -50px;
+}
+
+.footer li {
+  list-style: none;
+  margin-bottom: 8px;
+}
+
+.footer li a {
+  color: #000;
+}
+
+.footer {
+  margin-right: 100px;
+}
+
+}
 
