--- a/style.css
+++ b/style.css
@@ -1,19 +1,30 @@
 /* GENERAL */
 
 @font-face {
-    font-family: 'raleway-variableFont_wght';
+    font-family: 'raleway';
     src: url('font/raleway-bold.eot') format('eot'),
          url('font/raleway-bold.ttf') format('truetype'),
          url('font/raleway-bold.woff') format('woff'),
          url('font/raleway-bold.svg') format('svg');
-    src: url('font/raleway-variablefont_wght.eot') format('eot'),
-         url('font/raleway-variablefont_wght.ttf') format('truetype'),
-         url('font/raleway-variablefont_wght.woff') format('woff'),
-         url('font/raleway-variablefont_wght.svg') format('svg');
+
+         font-weight: bold;
+}
+
+
+@font-face {
+      font-family: 'raleway';
+      src: url('font/raleway.eot') format('eot'),
+           url('font/raleway.ttf') format('truetype'),
+           url('font/raleway.woff') format('woff'),
+           url('font/raleway.svg') format('svg');
+
+         font-weight: normal;
+         font-style: normal;
+         font-variant: normal;
 }
 
 body {
-  font-family: 'raleway-variableFont_wght', Sans serif;
+  font-family: 'raleway', Sans serif;
 }
 
 .avis {
@@ -48,7 +59,7 @@ header {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-end;
 }
 
 #en_tete a {
@@ -57,26 +68,27 @@ header {
   margin-right: 20px;
 }
 
+
 nav {
   width: 100%;
-}
-
-#navigation {
-  width: 100%;
+  margin-top: 10px;
   display: flex;
+  justify-content: center;
 }
 
 #menu_heb {
   border-bottom: 3px solid #F2F2F2;
-  width: 250px;
+  width: 240px;
   height: 30px;
+  margin-left: 20px;
   text-align: center;
 }
 
 #menu_act {
   border-bottom: 3px solid #F2F2F2;
-  width: 250px;
+  width: 240px;
   height: 30px;
+  margin-left: -20px;
   text-align: center;
 }
 
@@ -236,15 +248,11 @@ color: #fff;
   margin-bottom: 20px;
 }
 
-.fond_vignette_pop .avis {
-  padding-left: 10px;
-}
-
 .hebergements_pop {
   border-radius: 10px 0px 0px 10px;
   margin: 10px;  
   height: 180px;
-  width: 160px;
+  width: 130px;
   object-fit: cover;
   float: left;
 }
@@ -252,13 +260,21 @@ color: #fff;
 .description_vignette_pop {
   display: flex;
   flex-direction: column;
+  height: 170px;
   padding-left: 10px;
-  margin-bottom: 20px;
   margin-right: 20px;
 }
 
 .description_vignette_pop p {
-  margin-top: 10px;
+  margin-top:-5px;
+}
+
+.avis {
+  padding-left: 10px;
+}
+
+.avis_gris .fa-star {
+  color: #F2F2F2;
 }
 
 /* section 2 Hebergements */
@@ -409,9 +425,10 @@ footer {
   order:1;
 }
 
-#navigation {
+nav {
   justify-content: flex-end;
-  align-items: flex-end;
+  width: 1100px;
+  margin-right: -50px;
 }
 
 #navigation a {
@@ -420,10 +437,12 @@ footer {
 
 #menu_heb {
   border-bottom: none;
+  width: 200px;
 }
 
 #menu_act {
   border-bottom: none;
+  width: 200px;
 }
 
 #menu_heb:hover, #menu_heb:active {
@@ -477,22 +496,27 @@ footer {
 }
 
 .fond_vignette_heb {
-  height: 250px;
-  width: 30%;
+  height: 260px;
+  width: 31%;
   margin: 0 auto 40px;
   box-shadow: 2px 2px 10px #a0a0a0;
 }
 
 .hebergements_ville {
-  width: 93%;
+  width: 89%;
   height: 140px;
   margin: 10px 10px; 
 }
 
 .description_vignette_heb {
-  margin-top: -25px;
   margin-left: 3px;
+  height: 85px;
 }
+
+.description_vignette_heb h3 {
+  margin-top: 5px;
+}
+
 
 /* Les plus populaires */
 
@@ -517,9 +541,12 @@ footer {
 .hebergements_pop {
   margin: 10px;  
   height: 89%;
-  width: 160px;
   object-fit: cover;
   float: left;
+}
+
+.description_vignette_pop {
+  height: 145px;
 }
 
 /* Activites */
@@ -530,7 +557,8 @@ footer {
   flex-direction: column;
   flex-wrap: wrap;
   height: 500px;
-  margin-left: -25px;
+  width: 100%;
+  margin-left:-27px;
 }
 
 .fond_vignette_act_1 {
@@ -539,8 +567,8 @@ footer {
   border-radius: 10px;
   box-shadow: 2px 2px 10px #F2F2F2;
   height: 470px;
-  width: 23%;
-  margin-right: 10px;
+  width: 24%;
+  margin-right: 0px;
 }
 
 .fond_vignette_act_1 .activites_ville {
@@ -557,8 +585,8 @@ footer {
   border-radius: 10px;
   box-shadow: 2px 2px 10px #F2F2F2;
   height: 250px;
-  width: 23%;
-  margin-right: 10px;
+  width: 24%;
+  margin-right: 0px;
 
 }
 
@@ -576,8 +604,8 @@ footer {
   border-radius: 10px;
   box-shadow: 2px 2px 10px #F2F2F2;
   height: 200px;
-  width: 23%;
-  margin-right: 10px;
+  width: 24%;
+  margin-right: 0px;
 
 }
 
@@ -596,21 +624,12 @@ footer {
   display: flex;
 }
 
-.footer ul {
-  margin-left: -50px;
-}
-
-.footer li {
-  list-style: none;
-  margin-bottom: 8px;
-}
-
-.footer li a {
-  color: #000;
+.footer h3 {
+  padding-left: 28px;
 }
 
 .footer {
-  margin-right: 150px;
+  margin-right: 60px;
 }
 
 }
@@ -619,57 +638,99 @@ footer {
 
 @media screen and (min-width: 768px) and (max-width: 991px) {
 
-/* Les plus populaires */
+/* Menu */
 
-#fond_populaire {
-  border-radius: 10px;
-  height: 700px;
+#logo {
+  padding-top: 20px;
 }
 
-#titre_pop {
-  width: 95%;
-  margin-left: 15px;
-  margin-bottom: -15px;
+#en_tete {
+  flex-wrap: nowrap;
+}
+
+#inscription:nth-child(2) {
+  order:1;
+}
+
+nav {
+  justify-content: flex-end;
+  width: 1100px;
+  margin-right: -50px;
+}
+
+#navigation a {
+  padding-top: 30px;
+}
+
+#menu_heb {
+  border-bottom: none;
+  width: 200px;
+}
+
+#menu_act {
+  border-bottom: none;
+  width: 200px;
+}
+
+#menu_heb:hover, #menu_heb:active {
+  border-top: 2px solid #0065FC;
+  border-bottom: none;
+  color: #0065FC;
+}
+
+#menu_act:hover, #menu_act:active {
+  border-top: 2px solid #0065FC;
+  border-bottom: none;
+  color: #0065FC;
+}
+
+#inscription {
+  padding-top: 30px;
+}
+
+/* Les plus populaires */
+
+#all_vignettes_pop {
+  display: flex;
 }
 
 .fond_vignette_pop {
-  width: 95%;
-  height: 178px;
-  margin: 0 auto 20px;
-  box-shadow: 2px 2px 10px #a0a0a0;
+  display: flex;
+  flex-direction: column;
+  height: 250px;
+  width: 93%;
+  margin-left: 10px;
 }
 
 .hebergements_pop {
-  margin: 10px;  
-  height: 89%;
-  width: 160px;
+  border-radius: 10px 10px 0px 0px;
+  margin: 5px;  
+  height: 55%;
+  width: 95%;
   object-fit: cover;
   float: left;
 }
 
-/* Hebergements */
-
-#heb_pop {
-  display: flex;
-  flex-direction: row-reverse;
-}
-#fond_hebergement {
-  background-color: #F2F2F2;
-  border-radius: 10px;
-  margin-right: 20px;
-  height: 700px;
-  width: 70%;
-  justify-content: center;
+.description_vignette_pop {
+  height: 78px;
+  padding-left: 10px;
+  margin-right: 5px;
 }
 
-#fond_hebergement h2, a {
-  margin-left: 20px;
+.description_vignette_pop p {
+  margin-top:-15px;
 }
+
+.description_vignette_pop h3 {
+  margin-top: -1px;
+}
+
+/* Hébergements */
+
 
 #all_vignettes_heb {
   display: flex;
   flex-wrap: wrap;
-  margin: auto;
 }
 
 .fond_vignette_heb {
@@ -679,40 +740,87 @@ footer {
   box-shadow: 2px 2px 10px #a0a0a0;
 }
 
-.hebergements_ville {
-  width: 93%;
-  height: 140px;
-  margin: 10px 10px; 
+/* Activités */
+
+#all_vignettes_act {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  height: 400px;
+  margin-left: 15px;
 }
 
-.description_vignette_heb {
-  margin-top: -25px;
-  margin-left: 3px;
+.fond_vignette_act_1 {
+  background-color: #fff;
+  border: 0.5px solid #F2F2F2;
+  border-radius: 10px;
+  box-shadow: 2px 2px 10px #F2F2F2;
+  height: 360px;
+  width: 23%;
+  margin-right: 10px;
 }
 
+.fond_vignette_act_1 .activites_ville {
+  border-radius: 10px 10px 0px 0px;
+  margin: 0px;  
+  height: 300px;
+  width: 100%;
+  object-fit: cover;
+}
+
+.fond_vignette_act_2 {
+  background-color: #fff;
+  border: 0.5px solid #F2F2F2;
+  border-radius: 10px;
+  box-shadow: 2px 2px 10px #F2F2F2;
+  height: 180px;
+  width: 23%;
+  margin-right: 10px;
+
+}
+
+.fond_vignette_act_2 .activites_ville {
+  border-radius: 10px 10px 0px 0px;
+  margin: 0px;  
+  height: 130px;
+  width: 100%;
+  object-fit: cover;
+}
+
+.fond_vignette_act_3 {
+  background-color: #fff;
+  border: 0.5px solid #F2F2F2;
+  border-radius: 10px;
+  box-shadow: 2px 2px 10px #F2F2F2;
+  height: 160px;
+  width: 23%;
+  margin-right: 10px;
+
+}
+
+.fond_vignette_act_3 .activites_ville {
+  border-radius: 10px 10px 0px 0px;
+  margin: 0px;  
+  height: 100px;
+  width: 100%;
+  object-fit: cover;
+}
+
+.description_vignette_act {
+  margin-top: -10px;
+
+}
 
 /* PIED PAGE */
 
 footer {
-  margin-top: 40px;
   display: flex;
 }
 
-.footer ul {
-  margin-left: -50px;
-}
-
-.footer li {
-  list-style: none;
-  margin-bottom: 8px;
-}
-
-.footer li a {
-  color: #000;
-}
 
 .footer {
-  margin-right: 50px;
+  margin-top: 30px;
+  margin-right: 70px;
 }
 
 }
