--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@
 body 
 {
   font-family: 'raleway', Sans serif;
+  margin: 0;
 }
 
 .avis 
@@ -71,6 +72,8 @@ header
 #logo 
 {
   margin-right: 130px;
+  margin-top: 10px;
+  padding-left: 20px;
 }
 
 nav 
@@ -85,6 +88,9 @@ nav
 {
   color: #0065FC;
   text-decoration: none;
+  padding-right: 30px;
+  margin-top: 10px;
+
 }
 
 #menu_heb 
@@ -125,6 +131,11 @@ nav
 
 /* CONTENU PAGE */
 
+.titre_page {
+  padding-left: 20px;
+}
+
+
 .titre_page p 
 {
   margin-top: -5px;
@@ -137,6 +148,7 @@ nav
 {
   display: flex;
   margin-bottom: 40px;
+
 }
 
 #geolocalisation 
@@ -181,6 +193,11 @@ button
 }
 /* filtres */
 
+
+#section_filtres {
+  padding-left: 20px;
+}
+
 #filtres 
 {
   display: flex;
@@ -211,9 +228,10 @@ button
 
 .form_filter 
 {
-  border: 1px solid #F2F2F2;
+  border: 2px solid #F2F2F2;
   border-radius: 40px;
-  height: 38px;
+  box-sizing: border-box;
+  height: 40px;
   width: auto;
   margin-left: 10px;
   display: flex;
@@ -248,6 +266,7 @@ color: #fff;
   margin-top: 40px;
   margin-bottom: 40px;
   align-items: center;
+  padding-left: 20px;
 }
 
 #icone_info 
@@ -269,29 +288,32 @@ color: #fff;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 15px;
 }
 
 
 #fond_populaire 
 {
   background-color: #F2F2F2;
-  padding: 10px;
+  margin: 5px;
+  height: 730px;
 }
 
 .fond_vignette_pop 
 { 
   background-color: #fff;
-  border-radius: 10px;
-  height: 200px;
-  margin-bottom: 20px;
+  border-radius: 20px;
+  height: 180px;
+  width: 93%;
+  margin: 0 auto 15px auto;
 }
 
 .hebergements_pop 
 {
-  border-radius: 10px 0px 0px 10px;
-  margin: 10px;  
-  height: 180px;
-  width: 130px;
+  border-radius: 20px 0px 0px 20px;
+  margin: 8px;  
+  height: 91%;
+  width: 170px;
   object-fit: cover;
   float: left;
 }
@@ -300,6 +322,7 @@ color: #fff;
 {
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
   height: 170px;
   padding-left: 10px;
   margin-right: 20px;
@@ -307,12 +330,12 @@ color: #fff;
 
 .description_vignette_pop p 
 {
-  margin-top:-5px;
+  margin-top:-35px;
 }
 
-.avis 
+.description_vignette_pop h4 
 {
-  padding-left: 10px;
+  margin-top: 0;
 }
 
 .avis_gris .fa-star 
@@ -325,12 +348,19 @@ color: #fff;
 #fond_hebergement 
 {
   background-color: #fff;
-  padding: 10px;
+  margin: 5px;
 }
 
-#fond_hebergement a 
+#fond_hebergement h2
 {
-  color:#000;
+  margin: 30px 0 0px 30px;
+}
+
+#afficher_plus 
+{
+  padding-left: 25px;
+  height: 40px;
+  padding-top: 10px;
 }
 
 .fond_vignette_heb 
@@ -339,18 +369,18 @@ color: #fff;
   flex-direction: column;
   background-color: #fff;
   border: 0.5px solid #F2F2F2;
-  border-radius: 10px;
+  border-radius: 20px;
   box-shadow: 2px 2px 10px #F2F2F2;
-  height: 250px;
-  margin-bottom: 20px;
+  height: 280px;
+  margin: 15px;
 }
 
 .hebergements_ville 
 {
-  border-radius: 10px 10px 0px 0px;
-  margin: 0px;  
+  border-radius: 20px 20px 0px 0px;
+  margin: 10px auto;  
   height: 150px;
-  width: 100%;
+  width: 96%;
   object-fit: cover;
 }
 
@@ -358,7 +388,7 @@ color: #fff;
 {
   display: flex;
   flex-direction: column;
-  padding-left: 10px;
+  padding-left: 15px;
   margin-top: -18px;
 }
 
@@ -367,14 +397,28 @@ color: #fff;
   margin-top: -12px;
 }
 
+.fond_vignette_heb .avis
+{
+    padding-left: 15px;
+}
+
 
 /* section 3 Activites */
 
 
+#ancre_activite
+{
+  padding-left: 20px;
+}
+
 #fond_activite 
 {
-  padding: 10px;
-  margin-top: 10px;
+  margin: 40px 5px;
+}
+
+#fond_activite h2
+{
+  margin: 30px 15px;
 }
 
 .fond_vignette_act_1 
@@ -383,10 +427,10 @@ color: #fff;
   flex-direction: column;
   background-color: #fff;
   border: 0.5px solid #F2F2F2;
-  border-radius: 10px;
+  border-radius: 20px;
   box-shadow: 2px 2px 10px #F2F2F2;
   height: 250px;
-  margin-bottom: 20px;
+  margin: 15px;
 }
 
 .fond_vignette_act_2 
@@ -395,10 +439,10 @@ color: #fff;
   flex-direction: column;
   background-color: #fff;
   border: 0.5px solid #F2F2F2;
-  border-radius: 10px;
+  border-radius: 20px;
   box-shadow: 2px 2px 10px #F2F2F2;
   height: 250px;
-  margin-bottom: 20px;
+  margin: 15px;
 }
 
 .fond_vignette_act_3 
@@ -407,15 +451,15 @@ color: #fff;
   flex-direction: column;
   background-color: #fff;
   border: 0.5px solid #F2F2F2;
-  border-radius: 10px;
+  border-radius: 20px;
   box-shadow: 2px 2px 10px #F2F2F2;
   height: 250px;
-  margin-bottom: 20px;
+  margin: 15px;
 }
 
 .activites_ville 
 {
-  border-radius: 10px 10px 0px 0px;
+  border-radius: 20px 20px 0px 0px;
   margin: 0px;  
   height: 180px;
   width: 100%;
@@ -424,7 +468,7 @@ color: #fff;
 
 .description_vignette_act 
 {
-  padding-left: 10px;
+  padding-left: 15px;
 }
 
 .description_vignette_act p 
@@ -446,25 +490,27 @@ color: #fff;
 footer 
 {
   background-color: #F2F2F2;
-  padding-left: 20px;
-  padding-top: 5px;
-  padding-bottom: 30px;
+  margin: 5px;
+  padding-top: 10px;
+  padding-bottom: 25px;
 }
 
 .footer h3 
 {
-  padding-left: 10px;
+  padding-left: 15px;
+  margin-top: 40px;
 }
 
 .footer ul 
 {
-  margin-left: -30px;
+  padding-left: 15px;
+
 }
 
 .footer li 
 {
 	list-style: none;
-  margin-bottom: 8px;
+  margin-bottom: 10px;
 }
 
 .footer li a 
@@ -474,8 +520,6 @@ footer
 
 .footer 
 {
-  margin-top: 40px;
-  margin-right: 20px;
 }
 
 
@@ -495,8 +539,8 @@ header
 #logo 
 {
   position: absolute;
-  top: 20px;
-  left: 10px;
+  top: 15px;
+  left: 0px;
 }
 
 nav 
@@ -514,8 +558,9 @@ nav
 #inscription 
 {
   height: 40px;
-  margin-top: 5px;
+  margin-top: 25px;
   padding-top: 20px;
+  margin-left: 20px;
 }
 
 #menu_heb 
@@ -525,6 +570,7 @@ nav
   height: 40px;
   margin-top: 5px;
   padding-top: 20px;
+  box-sizing: border-box;
 }
 
 #menu_act 
@@ -534,6 +580,7 @@ nav
   height: 40px;
   margin-top: 5px;
   padding-top: 20px;
+  box-sizing: border-box;
 }
 
 #menu_heb:hover, #menu_heb:active 
@@ -541,6 +588,8 @@ nav
   border-top: 2px solid #0065FC;
   border-bottom: none;
   color: #0065FC;
+  height: 44px;
+
 }
 
 #menu_act:hover, #menu_act:active 
@@ -548,6 +597,7 @@ nav
   border-top: 2px solid #0065FC;
   border-bottom: none;
   color: #0065FC;
+  height: 44px;
 }
 
 /* Formulaire */
@@ -589,6 +639,17 @@ button .fa-search
   align-items: center;
 }
 
+#titre_filtre
+{
+  width: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: -15px;
+  margin-top: -5px;
+  height: 30px;
+}
+
 
 /* Hebergements */
 
@@ -597,52 +658,51 @@ button .fa-search
   display: flex;
   flex-direction: row-reverse;
 }
+
 #fond_hebergement 
 {
   background-color: #F2F2F2;
-  border-radius: 10px;
+  border-radius: 20px;
   margin-right: 20px;
-  height: 700px;
-  width: 70%;
-  justify-content: center;
+  margin-left: 20px;
+  height: auto;
+  width: 80%;
 }
 
-#fond_hebergement h2, a 
+
+#fond_hebergement h2
 {
-  margin-left: 20px;
-}
+  margin: 0;
+  padding: 25px 0 0 28px;
+} 
 
 #all_vignettes_heb 
 {
   display: flex;
   flex-wrap: wrap;
-  margin: auto;
+  margin-top: 15px;
+  justify-content: space-between;
+  padding: 0 10px;
 }
 
 .fond_vignette_heb 
 {
-  height: 260px;
-  width: 31%;
-  margin: 0 auto 40px;
+  height: auto;
+  width: 27%;
   box-shadow: 2px 2px 10px #a0a0a0;
+  flex-grow: 1;
+}
+
+.fond_vignette_heb .avis
+{
+  margin-bottom: 10px;
 }
 
 .hebergements_ville 
 {
-  width: 91%;
+  width: 97%;
   height: 140px;
-  margin: auto; 
-}
-
-.description_vignette_heb 
-{
-  margin-left: 3px;
-  height: 80px;
-}
-
-.description_vignette_heb h4 
-{
-  margin-top: 5px;
+  margin: 5px;
 }
 
 .description_vignette_heb p 
@@ -650,9 +710,9 @@ button .fa-search
   margin-top: -15px;
 }
 
-.avis {
-  position: relative;
-  top: -5px;
+.afficher_plus 
+{
+  padding-left: 30px;
 }
 
 
@@ -660,49 +720,70 @@ button .fa-search
 
 #fond_populaire 
 {
-  border-radius: 10px;
-  height: 700px;
+  border-radius: 20px;
+  padding-bottom: 20px;
+  height: auto;
 }
 
 #titre_pop 
 {
-  width: 95%;
-  margin-left: 15px;
-  margin-bottom: -15px;
+  height: 40px;
+  padding: 20px 20px 0 20px;
+}
+
+#all_vignettes_pop 
+{
+  display: flex;
+  flex-direction: column;
 }
 
 .fond_vignette_pop 
 {
-  width: 95%;
-  height: 178px;
-  margin: 0 auto 20px;
+  width: 85%;
+  height: 160px;
   box-shadow: 2px 2px 10px #a0a0a0;
+  margin-top: 25px;
 }
 
 .hebergements_pop 
 {
-  margin: 10px;  
-  height: 89%;
+  margin: 5px;
+  height: 150px;
+  width: 150px;  
   object-fit: cover;
   float: left;
 }
 
 .description_vignette_pop 
 {
-  height: 145px;
+  height: 160px;
+  justify-content: space-around;
+}
+
+.description_vignette_pop h4
+{
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.description_vignette_pop p
+{
+
+    margin-top: -20px;
+    margin-bottom: 0px;
+
 }
 
 /* Activites */
-
 
 #all_vignettes_act 
 {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  height: 500px;
+  height: 560px;
   width: 100%;
-  margin-left:-27px;
+  margin-left: 5px;
 }
 
 .fond_vignette_act_1 
@@ -712,7 +793,7 @@ button .fa-search
   border-radius: 10px;
   box-shadow: 2px 2px 10px #F2F2F2;
   height: 470px;
-  width: 24%;
+  width: 23%;
   margin-right: 0px;
 }
 
@@ -731,8 +812,8 @@ button .fa-search
   border: 0.5px solid #F2F2F2;
   border-radius: 10px;
   box-shadow: 2px 2px 10px #F2F2F2;
-  height: 250px;
-  width: 24%;
+  height: 239px;
+  width: 23%;
   margin-right: 0px;
 }
 
@@ -740,7 +821,7 @@ button .fa-search
 {
   border-radius: 10px 10px 0px 0px;
   margin: 0px;  
-  height: 180px;
+  height: 168px;
   width: 100%;
   object-fit: cover;
 }
@@ -752,7 +833,7 @@ button .fa-search
   border-radius: 10px;
   box-shadow: 2px 2px 10px #F2F2F2;
   height: 200px;
-  width: 24%;
+  width: 23%;
   margin-right: 0px;
 
 }
@@ -761,7 +842,7 @@ button .fa-search
 {
   border-radius: 10px 10px 0px 0px;
   margin: 0px;  
-  height: 135px;
+  height: 130px;
   width: 100%;
   object-fit: cover;
 }
@@ -770,18 +851,12 @@ button .fa-search
 
 footer 
 {
-  margin-top: 40px;
   display: flex;
-}
-
-.footer h3 
-{
-  padding-left: 28px;
 }
 
 .footer 
 {
-  margin-right: 60px;
+  margin-right: 220px;
 }
 
 }
@@ -803,7 +878,7 @@ header
 {
   position: absolute;
   top: 20px;
-  left: 10px;
+  left: 0px;
 }
 
 nav 
@@ -821,8 +896,9 @@ nav
 #inscription 
 {
   height: 40px;
-  margin-top: 5px;
+  margin-top: 25px;
   padding-top: 20px;
+  margin-left: 20px;
 }
 
 #menu_heb 
@@ -832,6 +908,7 @@ nav
   height: 40px;
   margin-top: 5px;
   padding-top: 20px;
+  box-sizing: border-box;
 }
 
 #menu_act 
@@ -841,6 +918,7 @@ nav
   height: 40px;
   margin-top: 5px;
   padding-top: 20px;
+  box-sizing: border-box;
 }
 
 #menu_heb:hover, #menu_heb:active 
@@ -848,6 +926,7 @@ nav
   border-top: 2px solid #0065FC;
   border-bottom: none;
   color: #0065FC;
+  height: 44px;
 }
 
 #menu_act:hover, #menu_act:active 
@@ -855,6 +934,12 @@ nav
   border-top: 2px solid #0065FC;
   border-bottom: none;
   color: #0065FC;
+  height: 44px;
+}
+
+.titre_page 
+{
+  margin-top: 50px;
 }
 
 /* Formulaire */
@@ -884,31 +969,36 @@ button .fa-search
 #all_vignettes_pop 
 {
   display: flex;
-  width: 98%;
+  padding-left: 5px;
+  justify-content: space-between;
+}
+
+#fond_populaire 
+{
+  height: 400px;
 }
 
 .fond_vignette_pop 
 {
   display: flex;
   flex-direction: column;
-  height: 250px;
-  width: 93%;
+  height: 260px;
+  width: 88%;
   margin-left: 10px;
 }
 
 .hebergements_pop 
 {
-  border-radius: 10px 10px 0px 0px;
+  border-radius: 20px 20px 0px 0px;
   margin: 5px;  
   height: 55%;
   width: 95%;
   object-fit: cover;
-  float: left;
 }
 
 .description_vignette_pop 
 {
-  height: 78px;
+  height: auto;
   padding-left: 10px;
   margin-right: 5px;
 }
@@ -920,38 +1010,58 @@ button .fa-search
 
 .description_vignette_pop h4 
 {
-  margin-top: -1px;
+  
 }
 
 /* Hébergements */
 
 
+#fond_hebergement h2 
+{
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
+
 #all_vignettes_heb 
 {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .fond_vignette_heb 
 {
   height: 250px;
-  width: 30%;
-  margin: 0 auto 40px;
+  width: 45%;
   box-shadow: 2px 2px 10px #a0a0a0;
+  margin-bottom: 10px;
+}
+
+.hebergements_ville 
+{
+  border-radius: 20px 20px 0px 0px;
+  margin: 5px;  
+  height: 55%;
+  width: 97%;
+  object-fit: cover;
 }
 
 /* Activités */
 
-
+#ancre_activite {
+  padding-left: 20px;
+  margin-top: 40px;
+}
 
 #all_vignettes_act 
 {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  height: 400px;
-  width: 100%;
-  margin-left: 8px;
+  height: 480px;
+  align-items: center;
+  padding-right: 15px;
+  margin-top:-10px;
 }
 
 .fond_vignette_act_1 
@@ -960,8 +1070,8 @@ button .fa-search
   border: 0.5px solid #F2F2F2;
   border-radius: 10px;
   box-shadow: 2px 2px 10px #F2F2F2;
-  height: 350px;
-  width: 22.5%;
+  height: 200px;
+  width: 30%;
   margin-right: 12px;
 }
 
@@ -969,7 +1079,7 @@ button .fa-search
 {
   border-radius: 10px 10px 0px 0px;
   margin: 0px;  
-  height: 300px;
+  height: 150px;
   width: 100%;
   object-fit: cover;
 }
@@ -980,8 +1090,8 @@ button .fa-search
   border: 0.5px solid #F2F2F2;
   border-radius: 10px;
   box-shadow: 2px 2px 10px #F2F2F2;
-  height: 180px;
-  width: 22.5%;
+  height: 200px;
+  width: 30%;
   margin-right: 12px;
 }
 
@@ -989,7 +1099,7 @@ button .fa-search
 {
   border-radius: 10px 10px 0px 0px;
   margin: 0px;  
-  height: 130px;
+  height: 150px;
   width: 100%;
   object-fit: cover;
 }
@@ -1000,8 +1110,8 @@ button .fa-search
   border: 0.5px solid #F2F2F2;
   border-radius: 10px;
   box-shadow: 2px 2px 10px #F2F2F2;
-  height: 150px;
-  width: 22.5%;
+  height: 200px;
+  width: 30%;
   margin-right: 12px;
 }
 
@@ -1009,7 +1119,7 @@ button .fa-search
 {
   border-radius: 10px 10px 0px 0px;
   margin: 0px;  
-  height: 100px;
+  height: 150px;
   width: 100%;
   object-fit: cover;
 }
@@ -1029,11 +1139,12 @@ button .fa-search
 footer 
 {
   display: flex;
+  margin-top: 0px;
 }
 
 .footer 
 {
-  margin-top: 30px;
+  margin-top: 0px;
   margin-right: 70px;
 }
 
