--- a/style.css
+++ b/style.css
@@ -528,18 +528,26 @@ footer
 @media screen and (min-width: 992px)
 {
 
+main
+{
+  padding-right: 10px;
+}
+
 /* Menu */
 
 header 
 {
-  height: 50px;
   margin-bottom: 40px;
+  margin-top: -3px;
+  height: 70px;
+  display: flex;
+  align-items: flex-end;
 }
 
 #logo 
 {
   position: absolute;
-  top: 15px;
+  top: -4px;
   left: 0px;
 }
 
@@ -547,6 +555,7 @@ nav
 {
   flex-wrap: nowrap;
   justify-content: flex-end;
+  align-items: baseline;
   width: 100%;
 }
 
@@ -557,9 +566,7 @@ nav
 
 #inscription 
 {
-  height: 40px;
-  margin-top: 25px;
-  padding-top: 20px;
+  height: 44px;
   margin-left: 20px;
 }
 
@@ -567,8 +574,8 @@ nav
 {
   border-bottom: none;
   width: 200px;
-  height: 40px;
-  margin-top: 5px;
+  height: 50px;
+  margin-top: 0px;
   padding-top: 20px;
   box-sizing: border-box;
 }
@@ -577,8 +584,8 @@ nav
 {
   border-bottom: none;
   width: 200px;
-  height: 40px;
-  margin-top: 5px;
+  height: 50px;
+  margin-top: 0px;
   padding-top: 20px;
   box-sizing: border-box;
 }
@@ -588,7 +595,7 @@ nav
   border-top: 2px solid #0065FC;
   border-bottom: none;
   color: #0065FC;
-  height: 44px;
+  height: 52px;
 
 }
 
@@ -597,7 +604,7 @@ nav
   border-top: 2px solid #0065FC;
   border-bottom: none;
   color: #0065FC;
-  height: 44px;
+  height: 52px;
 }
 
 /* Formulaire */
@@ -793,7 +800,7 @@ button .fa-search
   border-radius: 10px;
   box-shadow: 2px 2px 10px #F2F2F2;
   height: 470px;
-  width: 23%;
+  width: 23.2%;
   margin-right: 0px;
 }
 
@@ -813,7 +820,7 @@ button .fa-search
   border-radius: 10px;
   box-shadow: 2px 2px 10px #F2F2F2;
   height: 239px;
-  width: 23%;
+  width: 23.2%;
   margin-right: 0px;
 }
 
@@ -833,9 +840,8 @@ button .fa-search
   border-radius: 10px;
   box-shadow: 2px 2px 10px #F2F2F2;
   height: 200px;
-  width: 23%;
+  width: 23.2%;
   margin-right: 0px;
-
 }
 
 .fond_vignette_act_3 .activites_ville 
@@ -870,14 +876,15 @@ footer
 
 header 
 {
-  height: 50px;
   margin-bottom: 40px;
+  margin-top: -20px;
+  height: 60px;
 }
 
 #logo 
 {
   position: absolute;
-  top: 20px;
+  top: -5px;
   left: 0px;
 }
 
@@ -885,6 +892,7 @@ nav
 {
   flex-wrap: nowrap;
   justify-content: flex-end;
+  align-items: baseline;
   width: 100%;
 }
 
@@ -906,7 +914,7 @@ nav
   border-bottom: none;
   width: 200px;
   height: 40px;
-  margin-top: 5px;
+  margin-top: 0px;
   padding-top: 20px;
   box-sizing: border-box;
 }
@@ -916,7 +924,7 @@ nav
   border-bottom: none;
   width: 200px;
   height: 40px;
-  margin-top: 5px;
+  margin-top: 0px;
   padding-top: 20px;
   box-sizing: border-box;
 }
@@ -1060,8 +1068,9 @@ button .fa-search
   flex-wrap: wrap;
   height: 480px;
   align-items: center;
-  padding-right: 15px;
   margin-top:-10px;
+  padding-right: 20px;
+  padding-left: 5px;
 }
 
 .fond_vignette_act_1 
